# mhclovac

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  training.py
benchmark/: README.md  benchmark.py
mhc_profiles/: __init__.py  constants.py  core.py  profile.py  utils.py
mhclovac/: __init__.py  binding.py  cli.py  config.py  const.py  core.py  models.py  predictors.py  preprocessing.py  run.py  schemas.py  sequence.py  training.py  utils.py
mhclovac/index/: aaindex_data.pickle
research/: benchmark.py  benchmark_1.py  benchmark_2.py  benchmarking.py  data_cleanup.ipynb  data_prep.py  data_prep_2.py  evaluate.py  explore.py  feature_selection.py  figure_1.py  figure_2.py  index_prep.py  median_ligand_length.ipynb  modeling.py  script_2_data_prep.py  script_3.py  script_3_feature_selection.py  script_4.py  script_4_benchmarking.py  temp.fasta  training.py  v5.ipynb
research/results/: benchmarking_frank.csv  benchmarking_frank_results.csv  benchmarking_results.csv  benchmarking_roc.gzip
training/: aaindex_scrape.py  data_prep.ipynb  data_prep.py  evaluate_index_score.py  exploration.py  figure_1.py  graph.py  stacking.py  training.py  v5.ipynb
training/data/: CD8_epitopes.fsa  pseudo.json  pseudosequences.csv
training/exploration_results/: B12 class I.json  B15 class I.json  B4 class I.json  BF1*0201.json  BF1.json  BF2*0201.json  BF2*0401.json  BF2*1201.json  BF2*1301.json  BF2*1401.json  BF2*1501.json  BF2*2101.json  BF2.json  BoLA-1*02101.json  BoLA-2*00801.json  BoLA-2*01201.json  BoLA-2*01801.json  BoLA-4*02401.json  BoLA-6*01301.json  BoLA-6*01302.json  BoLA-6*04101.json  BoLA-A11.json  (+316 more)
