
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mhc-profiles"
dynamic = ["version"]
authors = [
  { name="Stefan Stojanovic" },
]
description = "Analysis of modeled physicochemical profiles of MHC ligands."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ['bioinformatics', 'immunoinformatics', 'prediction', 'mhc', 'peptide', 'physicochemistry']

[project.urls]
Homepage = "https://github.com/stefs304/mhc-profiles"
Issues = "https://github.com/stefs304/mhc-profiles/issues"

[tool.hatch.version]
path = "mhc_profiles/__version__.py"
